--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,11 +71,15 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oDwkbfwo&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n9YImMws'>Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available)</a></h5> 
+<p><span class="badge badge-light">Tempe, Arizona</span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='http://zigzag.applytojob.com/apply/L801H9qnkN/Data-Analyst-Sales-Operations'>Data Analyst & Sales Operations - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
+<h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -244,7 +248,7 @@ organization?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ncsoftwest/jobs/1928219'>Job Application for Senior Data Analyst  at NCSOFT</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ncsoftwest/jobs/1928219'>Job Application for Senior Data Analyst  at NCSOFT</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -291,7 +295,7 @@ organization?...</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/daveramsey/job/o9tobfwV'>Ramsey Solutions Careers - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/daveramsey/job/o9tobfwV'>Ramsey Solutions Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -328,7 +332,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oa68afwi&__jvst=Employee+Referral&__jvsd=sODmngwV&__jvsc=Twitter&bid=ncCilMwI&jvi=oa68afwi,Job&jvk=Job'>Medidata Solutions Careers - Associate Analyst, Commercial Business</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oa68afwi&__jvst=Employee+Referral&__jvsd=sODmngwV&__jvsc=Twitter&bid=ncCilMwI&jvi=oa68afwi,Job&jvk=Job'>Medidata Solutions Careers - Associate Analyst, Commercial Business</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -344,7 +348,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4492521002'>Job Application for Data Operations Analyst at Addepar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4492521002'>Job Application for Data Operations Analyst at Addepar</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -352,11 +356,11 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LinkAssetServices/743999698073059-bi-data-analyst'>Link Asset Services BI / Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LinkAssetServices/743999698073059-bi-data-analyst'>Link Asset Services BI / Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/insitesconsulting/job/oMlobfwq'>InSites Consulting Careers - Junior Data Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/insitesconsulting/job/oMlobfwq'>InSites Consulting Careers - Junior Data Analyst</a></h5> 
 <p><span class="badge badge-light">Sydney Australia  Sydney</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -402,7 +406,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 12, 2019 ... Data Analyst needed to join Boncom. Boncom is an advertising and 
 communications agency. We develop innovative and strategic campaigns both 
@@ -424,7 +428,7 @@ Zayo by providing various analyses relating to Zayo's network and geographical
 <p>Oct 17, 2019 ... Senior Project Manager and Data Analyst. Augusta, Maine, United States Full-
 time. Application closes: Oct 29, 2019. loading Fetching your Linkedin profile .</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/0D7926AC22'>Data Analyst - Human Domain Solutions, LLC (HDS)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/0D7926AC22'>Data Analyst - Human Domain Solutions, LLC (HDS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Human Domain Solutions,LLC is seeking a candidate to fill the role of Data 
 Analyst at The Office of Inspector General (OIG), Office of Audits (AUD), Audit?...</p>
@@ -440,7 +444,7 @@ the storage, virtual data centre infrastructures, infrastructure and application
 Strategic Data Scientist / Chief Customer Analyst. This role reports directly to our
 ?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oudpbfw1'>Santander Consumer USA Careers - Compliance Data Analyst III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oudpbfw1'>Santander Consumer USA Careers - Compliance Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -452,7 +456,7 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light">Irvine, California  Sunnyvale California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cityofwindsor.applytojob.com/apply/mAVWh2kLsl/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
+<h5><a href='http://cityofwindsor.applytojob.com/apply/mAVWh2kLsl/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -460,7 +464,7 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dashlane/jobs/1927392'>Job Application for Data Analyst at Dashlane</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dashlane/jobs/1927392'>Job Application for Data Analyst at Dashlane</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -506,10 +510,6 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <hr/>
 <h5><a href='https://geico.referrals.selectminds.com/jobs/security-data-analyst-10744'>Security Data Analyst - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/rydoo/jobs/4488174002'>Job Application for Procurement Data Analyst at Rydoo</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
